# mul-dsl-example

tree-sitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
tree-sitter/bindings/c/: tree-sitter-mui.h  tree-sitter-mui.pc.in
tree-sitter/bindings/go/: binding.go  binding_test.go
tree-sitter/bindings/node/: binding.cc  index.js
tree-sitter/bindings/python/tests/: test_binding.py
tree-sitter/bindings/python/tree_sitter_mui/: __init__.py  binding.c
tree-sitter/bindings/rust/: build.rs  lib.rs
tree-sitter/bindings/swift/TreeSitterMuiTests/: TreeSitterMuiTests.swift
tree-sitter/examples/: todo.mul
tree-sitter/src/: grammar.json  node-types.json  parser.c
